-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 14.0.0
-
None
-
-
b718adfe2 (14.0)
Inside the list of installed languages there is a separate English item (not stating the language/country)
For Gerrit Dashboard: QTCREATORBUG-31394 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
587747,2 | Remove duplicate "English" item from language list | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |