Remove duplicate "English" item from language list

Amends 3f47819893856702789d51d68a192952adb04639

Fixes: QTCREATORBUG-31394
Change-Id: Ia41b6a48b663ca3b8a4e687d95c26142e886d0c0
Reviewed-by: Christian Stenger <christian.stenger@qt.io>